--- a/src/lib/locales/en/common.json
+++ b/src/lib/locales/en/common.json
@@ -1,4 +1,7 @@
 {
+    "other": "Other",
+    "add_new_location": "Add new location",
+    "no_locations_saved": "No locations saved",
     "no_items_to_display": "No items to display",
     "cancel": "Cancel",
     "add": "Add"
