Edit input select allowing optional id, edit nav component

--- a/src/lib/locales/en/common.json
+++ b/src/lib/locales/en/common.json
@@ -1,5 +1,6 @@
 {
     "other": "Other",
+    "add_current_location": "Add current location",
     "add_new_location": "Add new location",
     "no_locations_saved": "No locations saved",
     "no_items_to_display": "No items to display",
