Change i18n to use icu parser, add locales, edit components, types, ui, utils

--- a/src/lib/locales/en/common.json
+++ b/src/lib/locales/en/common.json
@@ -1,4 +1,10 @@
 {
+    "quantity": "Quantity",
+    "per": "Per",
+    "price": "Price",
+    "product": "Product",
+    "location": "Location",
+    "edit": "Edit",
     "other": "Other",
     "add_current_location": "Add current location",
     "add_new_location": "Add new location",
