--- a/src/lib/locales/en/trade.json
+++ b/src/lib/locales/en/trade.json
@@ -12,6 +12,8 @@
         }
     },
     "glossary": {
+        "profile": "Profile",
+        "lot": "Lot",
         "process": "Process"
     }
 }
