Add envelope lower component, edit locales

--- a/src/lib/locales/en/trade.json
+++ b/src/lib/locales/en/trade.json
@@ -7,7 +7,7 @@
         },
         "fields": {
             "price_amt": {
-                "err_invalid": "Please enter the price"
+                "err_invalid": "Enter the price"
             }
         }
     },
