Add nav previous store, add query params stores, add routes utils, edit query params utils, add input element ui, add select element ui, add trellis input component, edit components, locales, stores, types, utils

--- a/src/lib/locales/en/common.json
+++ b/src/lib/locales/en/common.json
@@ -1,4 +1,13 @@
 {
+    "settings": "Settings",
+    "products": "Products",
+    "locations": "Locations",
+    "profiles": "Profiles",
+    "profile": "Profile",
+    "profile_name": "Profile name",
+    "details": "Details",
+    "key": "Key",
+    "active": "Active",
     "delete": "Delete",
     "messages": "Messages",
     "message": "Message",
