Edit nav component option features, edit app config component, add toast ui, edit locales, stores, types, utils

--- a/src/lib/locales/en/common.json
+++ b/src/lib/locales/en/common.json
@@ -1,4 +1,11 @@
 {
+    "done": "Done",
+    "unlock": "Unlock",
+    "nsec": "Nsec",
+    "npub": "Npub",
+    "hex": "Hex",
+    "public_key": "Public key",
+    "keys": "Keys",
     "settings": "Settings",
     "products": "Products",
     "locations": "Locations",
