Edit label type, edit label_swap ui, add locales, stores

--- a/src/lib/locales/en/common.json
+++ b/src/lib/locales/en/common.json
@@ -1,4 +1,8 @@
 {
+    "update": "Update",
+    "status": "Status",
+    "relays": "Relays",
+    "secret_key": "Secret key",
     "done": "Done",
     "unlock": "Unlock",
     "nsec": "Nsec",
