--- a/src/lib/locales/en/icu.json
+++ b/src/lib/locales/en/icu.json
@@ -1,16 +1,21 @@
 {
-    "your": "Your {value}",
-    "nostr": "Nostr {value}",
-    "invalid_entry": "Invalid {value} entry",
-    "enter_new": "Enter new {value}",
-    "enter": "Enter {value}",
-    "post": "Post {value}",
-    "no": "No {value}",
-    "delete": "Delete {value}",
-    "set_as": "Set as {value}",
-    "add": "Add {value}",
-    "add_a": "Add a {value}",
-    "edit": "Edit {value}",
-    "view": "View {value}",
-    "available": "{value} Available"
+    "connected_*": "Connected {value}",
+    "no_*_published": "No {value} published",
+    "*_as": "{value} as",
+    "as_*": "As {value}",
+    "*_copied": "{value} copied",
+    "your_*": "Your {value}",
+    "nostr_*": "Nostr {value}",
+    "invalid_*_entry": "Invalid {value} entry",
+    "enter_new_*": "Enter new {value}",
+    "enter_*": "Enter {value}",
+    "post_*": "Post {value}",
+    "no_*": "No {value}",
+    "delete_*": "Delete {value}",
+    "set_as_*": "Set as {value}",
+    "add_*": "Add {value}",
+    "add_a_*": "Add a {value}",
+    "edit_*": "Edit {value}",
+    "view_*": "View {value}",
+    "*_available": "{value} Available"
 }
