Add envelope buttons component, add blur component, edit css styles, add stores, routes, locales, edit layout and trellis components

--- a/src/lib/locales/en/common.json
+++ b/src/lib/locales/en/common.json
@@ -1,4 +1,10 @@
 {
+    "disconnect": "Disconnect",
+    "connected": "Connected",
+    "connection": "Connection",
+    "description": "Description",
+    "authenticated": "Authenticated",
+    "relay": "Relay",
     "update": "Update",
     "status": "Status",
     "relays": "Relays",
