Add nostr relay document polling count store, edit trellis row label, edit locales, types

--- a/src/lib/locales/en/common.json
+++ b/src/lib/locales/en/common.json
@@ -1,4 +1,7 @@
 {
+    "connect": "Connect",
+    "not_connected": "Not connected",
+    "url": "URL",
     "disconnect": "Disconnect",
     "connected": "Connected",
     "connection": "Connection",
