--- a/src/lib/locales/en/icu.json
+++ b/src/lib/locales/en/icu.json
@@ -1,4 +1,6 @@
 {
+    "disconnect_*": "Disconnect {value}",
+    "connect_*": "Connect {value}",
     "unconnected_*": "Unconnected {value}",
     "connected_*": "Connected {value}",
     "no_*_published": "No {value} published",
