Edit nav routing logic, edit nav option, edit layout trellis components, rename app config to app controls and move app config store assignment to `app`, add locales

--- a/src/lib/locales/en/icu.json
+++ b/src/lib/locales/en/icu.json
@@ -1,4 +1,6 @@
 {
+    "show_*": "Show {value}",
+    "invalid_*": "Invalid {value}",
     "disconnect_*": "Disconnect {value}",
     "connect_*": "Connect {value}",
     "unconnected_*": "Unconnected {value}",
