--- a/src/lib/locales/en/common.json
+++ b/src/lib/locales/en/common.json
@@ -1,4 +1,5 @@
 {
+    "list": "List",
     "add_map_location": "Add map location",
     "connect": "Connect",
     "not_connected": "Not connected",
