Edit stores, add locales

--- a/src/lib/locales/en/model_fields.json
+++ b/src/lib/locales/en/model_fields.json
@@ -3,6 +3,12 @@
 	"lng": "Longitude",
 	"geohash": "Geohash",
 	"label": "Label",
+	"gc_id": "",
+	"gc_name": "",
+	"gc_admin1_id": "",
+	"gc_admin1_name": "",
+	"gc_country_id": "",
+	"gc_country_name": "",
 	"key": "Key",
 	"title": "",
 	"summary": "",
