Edit stores, add locales, sort locales

--- a/src/lib/locales/en/common.json
+++ b/src/lib/locales/en/common.json
@@ -1,61 +1,61 @@
 {
-    "lot": "Lot",
-    "lot_name": "Lot name",
-    "product_name": "Product name",
-    "summary": "Summary",
-    "title": "Title",
-    "list": "List",
+    "active": "Active",
+    "add": "Add",
+    "add_current_location": "Add current location",
     "add_map_location": "Add map location",
+    "add_new_location": "Add new location",
+    "authenticated": "Authenticated",
+    "back": "Back",
+    "cancel": "Cancel",
     "connect": "Connect",
-    "not_connected": "Not connected",
-    "url": "URL",
-    "disconnect": "Disconnect",
     "connected": "Connected",
     "connection": "Connection",
-    "description": "Description",
-    "authenticated": "Authenticated",
-    "relay": "Relay",
-    "update": "Update",
-    "status": "Status",
-    "relays": "Relays",
-    "secret_key": "Secret key",
-    "done": "Done",
-    "unlock": "Unlock",
-    "nsec": "Nsec",
-    "npub": "Npub",
-    "hex": "Hex",
-    "public_key": "Public key",
-    "keys": "Keys",
-    "settings": "Settings",
-    "products": "Products",
-    "locations": "Locations",
-    "profiles": "Profiles",
-    "profile": "Profile",
-    "profile_name": "Profile name",
-    "details": "Details",
-    "key": "Key",
-    "active": "Active",
     "delete": "Delete",
-    "messages": "Messages",
-    "message": "Message",
-    "back": "Back",
-    "subject": "Subject",
+    "description": "Description",
+    "details": "Details",
+    "disconnect": "Disconnect",
+    "done": "Done",
+    "edit": "Edit",
     "from": "From",
-    "to": "To",
+    "hex": "Hex",
     "inbox": "Inbox",
-    "submit": "Submit",
+    "key": "Key",
+    "keys": "Keys",
+    "list": "List",
+    "location": "Location",
+    "locations": "Locations",
+    "lot": "Lot",
+    "lot_name": "Lot name",
+    "message": "Message",
+    "messages": "Messages",
+    "no_items_to_display": "No items to display",
+    "no_locations_saved": "No locations saved",
+    "not_connected": "Not connected",
+    "npub": "Npub",
+    "nsec": "Nsec",
     "optional": "Optional",
-    "quantity": "Quantity",
+    "other": "Other",
     "per": "Per",
     "price": "Price",
     "product": "Product",
-    "location": "Location",
-    "edit": "Edit",
-    "other": "Other",
-    "add_current_location": "Add current location",
-    "add_new_location": "Add new location",
-    "no_locations_saved": "No locations saved",
-    "no_items_to_display": "No items to display",
-    "cancel": "Cancel",
-    "add": "Add"
+    "product_name": "Product name",
+    "products": "Products",
+    "profile": "Profile",
+    "profile_name": "Profile name",
+    "profiles": "Profiles",
+    "public_key": "Public key",
+    "quantity": "Quantity",
+    "relay": "Relay",
+    "relays": "Relays",
+    "secret_key": "Secret key",
+    "settings": "Settings",
+    "status": "Status",
+    "subject": "Subject",
+    "submit": "Submit",
+    "summary": "Summary",
+    "title": "Title",
+    "to": "To",
+    "unlock": "Unlock",
+    "update": "Update",
+    "url": "URL"
 }
