--- a/src/lib/locales/en/currency.json
+++ b/src/lib/locales/en/currency.json
@@ -1,12 +1,12 @@
 {
-    "usd": {
-        "symbol": "$",
-        "name": "United States Dollar",
-        "name_short": "U.S. Dollar"
-    },
     "eur": {
-        "symbol": "€",
         "name": "Euro",
-        "name_short": "Euro"
+        "name_short": "Euro",
+        "symbol": "€"
+    },
+    "usd": {
+        "name": "United States Dollar",
+        "name_short": "U.S. Dollar",
+        "symbol": "$"
     }
 }
