--- a/src/lib/locales/en/icu.json
+++ b/src/lib/locales/en/icu.json
@@ -1,30 +1,31 @@
 {
-    "total_*": "Total {value}",
-    "*_details": "{value} details",
-    "listing_*": "Listing {value}",
-    "enter_the_*": "Enter the {value}",
-    "show_*": "Show {value}",
-    "invalid_*": "Invalid {value}",
-    "disconnect_*": "Disconnect {value}",
-    "connect_*": "Connect {value}",
-    "unconnected_*": "Unconnected {value}",
-    "connected_*": "Connected {value}",
-    "no_*_published": "No {value} published",
     "*_as": "{value} as",
-    "as_*": "As {value}",
+    "*_available": "{value} Available",
     "*_copied": "{value} copied",
-    "your_*": "Your {value}",
-    "nostr_*": "Nostr {value}",
-    "invalid_*_entry": "Invalid {value} entry",
-    "enter_new_*": "Enter new {value}",
-    "enter_*": "Enter {value}",
-    "post_*": "Post {value}",
-    "no_*": "No {value}",
-    "delete_*": "Delete {value}",
-    "set_as_*": "Set as {value}",
+    "*_details": "{value} details",
     "add_*": "Add {value}",
     "add_a_*": "Add a {value}",
+    "as_*": "As {value}",
+    "connect_*": "Connect {value}",
+    "connected_*": "Connected {value}",
+    "delete_*": "Delete {value}",
+    "disconnect_*": "Disconnect {value}",
     "edit_*": "Edit {value}",
+    "enter_*": "Enter {value}",
+    "enter_new_*": "Enter new {value}",
+    "enter_number_of_*_per_order": "Enter number of {value} per order",
+    "enter_the_*": "Enter the {value}",
+    "invalid_*": "Invalid {value}",
+    "invalid_*_entry": "Invalid {value} entry",
+    "listing_*": "Listing {value}",
+    "no_*": "No {value}",
+    "no_*_published": "No {value} published",
+    "nostr_*": "Nostr {value}",
+    "post_*": "Post {value}",
+    "set_as_*": "Set as {value}",
+    "show_*": "Show {value}",
+    "total_*": "Total {value}",
+    "unconnected_*": "Unconnected {value}",
     "view_*": "View {value}",
-    "*_available": "{value} Available"
+    "your_*": "Your {value}"
 }
