--- a/src/lib/locales/en/model_fields.json
+++ b/src/lib/locales/en/model_fields.json
@@ -1,47 +1,47 @@
 {
-	"lat": "Latitude",
-	"lng": "Longitude",
-	"geohash": "Geohash",
-	"label": "Label",
-	"gc_id": "",
-	"gc_name": "",
-	"gc_admin1_id": "",
-	"gc_admin1_name": "",
-	"gc_country_id": "",
-	"gc_country_name": "",
-	"key": "Key",
-	"title": "",
-	"summary": "",
-	"process": "Process",
-	"lot": "Lot",
-	"profile": "Profile",
-	"year": "Year",
-	"qty_amt": "Quantity Amount",
-	"qty_unit": "Quantity Unit",
-	"qty_label": "Quantity Label",
-	"qty_avail": "Quantity Available",
-	"price_amt": "Price",
-	"price_currency": "Currency",
-	"price_qty_amt": "Price",
-	"price_qty_unit": "Unit",
-	"notes": "Notes",
-	"public_key": "Public Key",
-	"name": "Profile Name",
-	"display_name": "Display Name",
-	"about": "About",
-	"website": "Website",
-	"picture": "Picture",
-	"banner": "Banner",
-	"nip05": "NIP 05",
-	"lud06": "LUD 06",
-	"lud16": "LUD 16",
-	"url": "",
-	"relay_id": "",
-	"description": "Relay Description",
-	"pubkey": "Relay Admin",
-	"contact": "",
-	"supported_nips": "Supported NIPs",
-	"software": "Software",
-	"version": "Version",
-	"data": ""
+    "about": "About",
+    "banner": "Banner",
+    "contact": "",
+    "data": "",
+    "description": "Relay Description",
+    "display_name": "Display Name",
+    "gc_admin1_id": "",
+    "gc_admin1_name": "",
+    "gc_country_id": "",
+    "gc_country_name": "",
+    "gc_id": "",
+    "gc_name": "",
+    "geohash": "Geohash",
+    "key": "Key",
+    "label": "Label",
+    "lat": "Latitude",
+    "lng": "Longitude",
+    "lot": "Lot",
+    "lud06": "LUD 06",
+    "lud16": "LUD 16",
+    "name": "Profile Name",
+    "nip05": "NIP 05",
+    "notes": "Notes",
+    "picture": "Picture",
+    "price_amt": "Price",
+    "price_currency": "Currency",
+    "price_qty_amt": "Price",
+    "price_qty_unit": "Unit",
+    "process": "Process",
+    "profile": "Profile",
+    "pubkey": "Relay Admin",
+    "public_key": "Public Key",
+    "qty_amt": "Quantity Amount",
+    "qty_avail": "Quantity Available",
+    "qty_label": "Quantity Label",
+    "qty_unit": "Quantity Unit",
+    "relay_id": "",
+    "software": "Software",
+    "summary": "",
+    "supported_nips": "Supported NIPs",
+    "title": "",
+    "url": "",
+    "version": "Version",
+    "website": "Website",
+    "year": "Year"
 }
