Add el to input element callback keydown, add locales

--- a/src/lib/locales/en/common.json
+++ b/src/lib/locales/en/common.json
@@ -7,12 +7,15 @@
     "authenticated": "Authenticated",
     "back": "Back",
     "cancel": "Cancel",
+    "configure": "Configure",
     "connect": "Connect",
     "connected": "Connected",
     "connection": "Connection",
+    "continue": "Continue",
     "delete": "Delete",
     "description": "Description",
     "details": "Details",
+    "device": "Device",
     "disconnect": "Disconnect",
     "done": "Done",
     "edit": "Edit",
@@ -49,6 +52,7 @@
     "relays": "Relays",
     "secret_key": "Secret key",
     "settings": "Settings",
+    "setup": "Setup",
     "status": "Status",
     "subject": "Subject",
     "submit": "Submit",
