--- a/src/lib/locales/en/icu.json
+++ b/src/lib/locales/en/icu.json
@@ -3,9 +3,11 @@
     "*_available": "{value} Available",
     "*_copied": "{value} copied",
     "*_details": "{value} details",
+    "*_your_device": "{value} your device",
     "add_*": "Add {value}",
     "add_a_*": "Add a {value}",
     "as_*": "As {value}",
+    "choose_a_*": "Choose a {}",
     "connect_*": "Connect {value}",
     "connected_*": "Connected {value}",
     "delete_*": "Delete {value}",
@@ -24,6 +26,8 @@
     "post_*": "Post {value}",
     "set_as_*": "Set as {value}",
     "show_*": "Show {value}",
+    "the_*_is_available": "The {value} is available",
+    "the_*_is_registered": "The {value} is registered",
     "total_*": "Total {value}",
     "unconnected_*": "Unconnected {value}",
     "view_*": "View {value}",
